k8s/dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xp-node-socketio-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: xp-node-socketio
  template:
    metadata:
      labels:
        app: xp-node-socketio
    spec:
      containers:
      - name: xp-node-socketio
        image: xp-node-socketio:latest
        ports:
        - containerPort: 3000
