k8s/dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xp-node-socketio-service
spec:
  selector:
    app: xp-node-socketio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
